fixed nav bar showing when user scrolls too quickly on mobile

--- a/meredithadelaide/sass/style.scss
+++ b/meredithadelaide/sass/style.scss
@@ -287,6 +287,8 @@ iframe{
 		top:50%;
 		-webkit-transform: translate(0, -50%);
 		transform: translate(0, -50%);
+		padding-right:10%;
+		margin-right:-12%;
 	}
 
 	#icon-nav:hover{
@@ -328,6 +330,7 @@ iframe{
 		width:100%;		
 		height:100%;
 		left:0;
+		background:#FAFAFA;
 		-webkit-transition: left .5s;
 		-moz-transition: left .5s;
 		-o-transition: left .5s;
@@ -343,10 +346,19 @@ iframe{
 		#sliding-container{
 			left:-250px;
 		}
+		.navbar-toggle, footer{
+			opacity:1;
+		}
 	}
 
 	.navbar-toggle{
+		-webkit-transition: opacity .5s;
+		-moz-transition: opacity .5s;
+		-o-transition: opacity .5s;
+		transition: opacity .5s;
+		opacity:0;
 		position:fixed;
+		
 		right:0;
 		background:#6C6C70;;
 		color:#fff;
@@ -416,6 +428,11 @@ iframe{
 		}
 
 		footer{
+			-webkit-transition: opacity .5s;
+			-moz-transition: opacity .5s;
+			-o-transition: opacity .5s;
+			transition: opacity .5s;
+			opacity:0;
 			position:fixed;
 			top:350px;
 			width:225px;
